[gd_scene load_steps=16 format=3 uid="uid://cte4tpb3enmkt"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_ekvm7"]
[ext_resource type="PackedScene" uid="uid://kch5nv0lplyw" path="res://scenes/character.tscn" id="1_k0y5g"]
[ext_resource type="PackedScene" uid="uid://ww5g24tuehh6" path="res://scenes/hurdle.tscn" id="2_ddva0"]
[ext_resource type="PackedScene" uid="uid://bh43ns362gb6f" path="res://art/monorail_trainFlat.glb" id="3_1824g"]
[ext_resource type="Environment" uid="uid://bvuc74os86vbw" path="res://resources/world.tres" id="3_bn2hq"]
[ext_resource type="PackedScene" uid="uid://c55aa2feobu44" path="res://scenes/overworld.tscn" id="7_lwosc"]
[ext_resource type="PackedScene" uid="uid://clujaf3u776a3" path="res://addons/godot-xr-tools/objects/viewport_2d_in_3d.tscn" id="7_tn8cd"]
[ext_resource type="PackedScene" uid="uid://byejsefm4uffs" path="res://scenes/main_menu.tscn" id="8_xqd8b"]
[ext_resource type="PackedScene" uid="uid://cftkcccpcbqb2" path="res://scenes/pause_menu.tscn" id="9_6byuj"]
[ext_resource type="PackedScene" uid="uid://c2v52ewwhqpa2" path="res://scenes/handzone_warning.tscn" id="10_esg23"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_twsep"]
data = PackedVector3Array(-0.25, 0.2, -0.5, -0.25, 0.15, -0.5, -0.2, 0.15, -0.5, -0.2, 0.15, -0.5, 0.2, 0.15, -0.5, -0.25, 0.2, -0.5, 0.2, 0.15, -0.5, 0.25, 0.15, -0.5, -0.25, 0.2, -0.5, 0.25, 0.15, -0.5, 0.25, 0.2, -0.5, -0.25, 0.2, -0.5, -0.2, 0.15, -0.5, -0.25, 0.15, -0.5, -0.25, 0.15, 0.5, -0.25, 0.15, 0.5, -0.2, 0.15, 0.5, -0.2, 0.15, -0.5, 0.25, 0.15, -0.5, 0.2, 0.15, -0.5, 0.2, 0.15, 0.5, 0.2, 0.15, 0.5, 0.25, 0.15, 0.5, 0.25, 0.15, -0.5, 0.25, 0.15, -0.5, 0.25, 0.15, 0.5, 0.25, 0.2, 0.5, 0.25, 0.2, 0.5, 0.25, 0.2, 0.45, 0.25, 0.15, -0.5, 0.25, 0.2, 0.45, 0.25, 0.25, 0.4, 0.25, 0.15, -0.5, 0.25, 0.25, 0.4, 0.25, 0.25, -0.4, 0.25, 0.15, -0.5, 0.25, 0.25, -0.4, 0.25, 0.2, -0.45, 0.25, 0.15, -0.5, 0.25, 0.2, -0.45, 0.25, 0.2, -0.5, 0.25, 0.15, -0.5, 0.25, 0.2, 0.5, 0.25, 0.15, 0.5, 0.2, 0.15, 0.5, 0.2, 0.15, 0.5, -0.2, 0.15, 0.5, 0.25, 0.2, 0.5, -0.2, 0.15, 0.5, -0.25, 0.15, 0.5, 0.25, 0.2, 0.5, -0.25, 0.15, 0.5, -0.25, 0.2, 0.5, 0.25, 0.2, 0.5, -0.2, 0.2, -0.45, -0.25, 0.2, -0.45, -0.25, 0.2, -0.5, -0.25, 0.2, -0.5, 0.25, 0.2, -0.5, -0.2, 0.2, -0.45, 0.25, 0.2, -0.5, 0.2, 0.2, -0.45, -0.2, 0.2, -0.45, 0.25, 0.2, -0.5, 0.25, 0.2, -0.45, 0.2, 0.2, -0.45, 0.25, 0.2, 0.5, -0.25, 0.2, 0.5, -0.25, 0.2, 0.45, -0.25, 0.2, 0.45, -0.2, 0.2, 0.45, 0.25, 0.2, 0.5, -0.2, 0.2, 0.45, 0.2, 0.2, 0.45, 0.25, 0.2, 0.5, 0.2, 0.2, 0.45, 0.25, 0.2, 0.45, 0.25, 0.2, 0.5, 0.25, 0.2, 0.45, 0.2, 0.2, 0.45, 0.2, 0.25, 0.4, 0.2, 0.25, 0.4, 0.25, 0.25, 0.4, 0.25, 0.2, 0.45, 0.25, 0.25, -0.4, 0.2, 0.25, -0.4, 0.2, 0.2, -0.45, 0.2, 0.2, -0.45, 0.25, 0.2, -0.45, 0.25, 0.25, -0.4, 0.25, 0.25, 0.4, 0.2, 0.25, 0.4, 0.2, 0.25, -0.4, 0.2, 0.25, -0.4, 0.25, 0.25, -0.4, 0.25, 0.25, 0.4, -0.2, 0.25, -0.4, -0.25, 0.25, -0.4, -0.25, 0.2, -0.45, -0.25, 0.2, -0.45, -0.2, 0.2, -0.45, -0.2, 0.25, -0.4, -0.2, 0.2, 0.45, -0.25, 0.2, 0.45, -0.25, 0.25, 0.4, -0.25, 0.25, 0.4, -0.2, 0.25, 0.4, -0.2, 0.2, 0.45, -0.2, 0.25, 0.4, -0.25, 0.25, 0.4, -0.25, 0.25, -0.4, -0.25, 0.25, -0.4, -0.2, 0.25, -0.4, -0.2, 0.25, 0.4, -0.25, 0.2, 0.45, -0.25, 0.2, 0.5, -0.25, 0.15, 0.5, -0.25, 0.15, 0.5, -0.25, 0.15, -0.5, -0.25, 0.2, 0.45, -0.25, 0.15, -0.5, -0.25, 0.25, 0.4, -0.25, 0.2, 0.45, -0.25, 0.15, -0.5, -0.25, 0.25, -0.4, -0.25, 0.25, 0.4, -0.25, 0.15, -0.5, -0.25, 0.2, -0.45, -0.25, 0.25, -0.4, -0.25, 0.15, -0.5, -0.25, 0.2, -0.5, -0.25, 0.2, -0.45, -0.2, 0.15, -0.5, -0.2, 0.15, 0.5, -0.2, 0.1, 0.5, -0.2, 0.1, 0.5, -0.2, 0.1, -0.5, -0.2, 0.15, -0.5, -0.2, 0.1, -0.5, -0.2, 0.1, 0.5, -0.15, 0, 0.5, -0.15, 0, 0.5, -0.15, 0, -0.5, -0.2, 0.1, -0.5, -0.1, 0, -0.5, -0.15, 0, -0.5, -0.15, 0, 0.5, -0.15, 0, 0.5, -0.1, 0, 0.5, -0.1, 0, -0.5, -0.1, 0, -0.5, -0.1, 0, 0.5, -0.1, 0.1, 0.5, -0.1, 0.1, 0.5, -0.1, 0.1, -0.5, -0.1, 0, -0.5, 0.1, 0.1, -0.5, -0.1, 0.1, -0.5, -0.1, 0.1, 0.5, -0.1, 0.1, 0.5, 0.1, 0.1, 0.5, 0.1, 0.1, -0.5, 0.1, 0.1, -0.5, 0.1, 0.1, 0.5, 0.1, 0, 0.5, 0.1, 0, 0.5, 0.1, 0, -0.5, 0.1, 0.1, -0.5, 0.15, 0, -0.5, 0.1, 0, -0.5, 0.1, 0, 0.5, 0.1, 0, 0.5, 0.15, 0, 0.5, 0.15, 0, -0.5, 0.15, 0, -0.5, 0.15, 0, 0.5, 0.2, 0.1, 0.5, 0.2, 0.1, 0.5, 0.2, 0.1, -0.5, 0.15, 0, -0.5, 0.2, 0.1, -0.5, 0.2, 0.1, 0.5, 0.2, 0.15, 0.5, 0.2, 0.15, 0.5, 0.2, 0.15, -0.5, 0.2, 0.1, -0.5, -0.2, 0.1, -0.5, -0.15, 0, -0.5, -0.1, 0, -0.5, -0.1, 0, -0.5, -0.1, 0.1, -0.5, -0.2, 0.1, -0.5, -0.1, 0.1, -0.5, -0.2, 0.15, -0.5, -0.2, 0.1, -0.5, -0.1, 0.1, -0.5, 0.1, 0.1, -0.5, -0.2, 0.15, -0.5, 0.1, 0.1, -0.5, 0.2, 0.1, -0.5, -0.2, 0.15, -0.5, 0.2, 0.1, -0.5, 0.2, 0.15, -0.5, -0.2, 0.15, -0.5, 0.15, 0, -0.5, 0.2, 0.1, -0.5, 0.1, 0.1, -0.5, 0.1, 0.1, -0.5, 0.1, 0, -0.5, 0.15, 0, -0.5, 0.2, 0.1, 0.5, 0.15, 0, 0.5, 0.1, 0, 0.5, 0.1, 0, 0.5, 0.1, 0.1, 0.5, 0.2, 0.1, 0.5, 0.1, 0.1, 0.5, 0.2, 0.15, 0.5, 0.2, 0.1, 0.5, 0.1, 0.1, 0.5, -0.1, 0.1, 0.5, 0.2, 0.15, 0.5, -0.1, 0.1, 0.5, -0.2, 0.1, 0.5, 0.2, 0.15, 0.5, -0.2, 0.1, 0.5, -0.2, 0.15, 0.5, 0.2, 0.15, 0.5, -0.15, 0, 0.5, -0.2, 0.1, 0.5, -0.1, 0.1, 0.5, -0.1, 0.1, 0.5, -0.1, 0, 0.5, -0.15, 0, 0.5, 0.2, 0.2, 0.45, -0.2, 0.2, 0.45, -0.2, 0.2, -0.45, -0.2, 0.2, -0.45, 0.2, 0.2, -0.45, 0.2, 0.2, 0.45, 0.2, 0.25, 0.4, 0.2, 0.2, 0.45, 0.2, 0.2, -0.45, 0.2, 0.2, -0.45, 0.2, 0.25, -0.4, 0.2, 0.25, 0.4, -0.2, 0.2, -0.45, -0.2, 0.2, 0.45, -0.2, 0.25, 0.4, -0.2, 0.25, 0.4, -0.2, 0.25, -0.4, -0.2, 0.2, -0.45)

[sub_resource type="Curve3D" id="Curve3D_7j47q"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -0.00144053, 0, -0.119674, 0, 0, 0, 0, 0, 0, 0, 0, 7.5339),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="BoxShape3D" id="BoxShape3D_qypsb"]
size = Vector3(1, 1, 0.449249)

[sub_resource type="BoxShape3D" id="BoxShape3D_ilb8b"]
size = Vector3(1, 3.02734, 0.487061)

[sub_resource type="BoxMesh" id="BoxMesh_i2kh5"]
size = Vector3(0.1, 0.1, 0.1)

[node name="World" type="Node3D"]
script = ExtResource("1_ekvm7")
hurdle = ExtResource("2_ddva0")
metadata/_edit_group_ = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("3_bn2hq")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
light_energy = 0.8
directional_shadow_mode = 0

[node name="LeftSideLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.838332, -0.315942, 0.444275, -0.112567, 0.697063, 0.708119, -0.533412, -0.643649, 0.548806, 0, 5.05293, -12.0142)
directional_shadow_mode = 0

[node name="RightSideLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.572254, 0.628076, -0.527301, -0.112567, 0.697063, 0.708119, 0.812314, -0.345867, 0.469598, 0, 5.05293, -12.0142)
directional_shadow_mode = 0

[node name="Character" parent="." instance=ExtResource("1_k0y5g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 0.2, 2.08165e-12)

[node name="CollisionShape3D" parent="Character/XROrigin3D/XRCamera3D/Hitbox" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00944971, 0.0283245, 0.00612399)

[node name="MonorailTrainFlat2" parent="." instance=ExtResource("3_1824g")]
transform = Transform3D(1.30387, 0, 0, 0, 1, 0, 0, 0, 0.5783, -2.81466, 0, -3.18186)
visible = false

[node name="monorail_trainFlat" parent="MonorailTrainFlat2/tmpParent" index="0"]
transform = Transform3D(4.33327, 0, 0, 0, 1, 0, 0, 0, 12.838, 2.06942, -0.148183, 1.5)

[node name="StaticBody3D" type="StaticBody3D" parent="MonorailTrainFlat2/tmpParent/monorail_trainFlat" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MonorailTrainFlat2/tmpParent/monorail_trainFlat/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_twsep")

[node name="Path3D" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.5339)
curve = SubResource("Curve3D_7j47q")

[node name="PathFollow3D" type="PathFollow3D" parent="Path3D"]
transform = Transform3D(-1, 0, -0.000188263, 0, 1, 0, 0.000188263, 0, -1, -0.00142193, 0, -0.020843)
progress = 0.1

[node name="Hurdle" parent="Path3D/PathFollow3D" instance=ExtResource("2_ddva0")]
transform = Transform3D(-4.3714e-08, 3.48787e-16, 1, 3.48787e-16, 1, -3.48786e-16, -1, 3.48787e-16, -4.3714e-08, -0.052, -0.2, 0.159)

[node name="DetectionBox" parent="Path3D/PathFollow3D/Hurdle" index="0"]
transform = Transform3D(1, 0, 0, -1.85288e-22, 1, 4.87024e-24, 0, 4.87522e-24, 1, 0.269155, 2.42738, -0.000317138)

[node name="CollisionShape3D" parent="Path3D/PathFollow3D/Hurdle/DetectionBox" index="0"]
transform = Transform3D(1, 0, 0, -2.19699e-21, 2, 1.47154e-23, 0, 9.75045e-24, 3, 0.125732, -0.109874, 0.00335693)

[node name="Plane" parent="Path3D/PathFollow3D/Hurdle" index="1"]
transform = Transform3D(-4.3714e-08, 6.97574e-16, 1, -1.6096e-23, 1, -6.97574e-16, -1, -1.65421e-22, -4.3714e-08, -0.492512, 1.35596, 1.86265e-08)

[node name="Object_2" parent="Path3D/PathFollow3D/Hurdle/Plane/Sketchfab_model/12cc6a9ff2ae45b08826ba235d9cb8b7_fbx" index="0"]
transform = Transform3D(1, 3.78564e-23, -3.38673e-11, 6.1448e-23, 1, -2.69011e-23, 2.87774e-11, -1.94564e-22, 1, 0, 414.77, 0)

[node name="Propeller_1" parent="Path3D/PathFollow3D/Hurdle/Plane/Sketchfab_model/12cc6a9ff2ae45b08826ba235d9cb8b7_fbx/Object_2/RootNode" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.873349, -46.0248, 401.434)

[node name="HandZone" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.29153e-05, 0, 0.00492787)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="HandZone"]
transform = Transform3D(2.32778, 0, 0, 0, 1.5, 0, 0, 0, 2.3045, 0.00874549, 0.733514, 0.254129)
shape = SubResource("BoxShape3D_qypsb")

[node name="Overworld" parent="." instance=ExtResource("7_lwosc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, -1, 2.08165e-12)

[node name="RepCounter" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.344755, 2.00911)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RepCounter"]
transform = Transform3D(3.75608, 0, 0, 0, 1, 0, 0, 0, 0.0561134, 0, 1.01367, -0.280634)
shape = SubResource("BoxShape3D_ilb8b")

[node name="RepSpot" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.344755, 2.00911)
visible = false
mesh = SubResource("BoxMesh_i2kh5")

[node name="HandZoneWarningLeft" parent="." instance=ExtResource("7_tn8cd")]
transform = Transform3D(0.883, 0, 0, 0, 0.3, 0, 0, 0, 0.84, 0, 2.87339, -2.43798)
visible = false
scene = ExtResource("10_esg23")
viewport_size = Vector2(946, 134)

[node name="HandZoneWarningRight" parent="." instance=ExtResource("7_tn8cd")]
transform = Transform3D(0.883, 0, 0, 0, 0.3, 0, 0, 0, 0.84, 0, 2.87339, -2.43798)
visible = false
scene = ExtResource("10_esg23")
viewport_size = Vector2(946, 134)

[node name="Menu" parent="." instance=ExtResource("7_tn8cd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.24886, -2.29315)
scene = ExtResource("8_xqd8b")
viewport_size = Vector2(1152, 648)
unshaded = true

[node name="PauseMenu" parent="." instance=ExtResource("7_tn8cd")]
transform = Transform3D(0.001, 0, 0, 0, 0.001, 0, 0, 0, 0.001, 0, 2.24886, -2.24321)
scene = ExtResource("9_6byuj")
viewport_size = Vector2(1152, 648)
input_keyboard = false
unshaded = true

[connection signal="area_entered" from="Character/XROrigin3D/XRCamera3D/Hitbox" to="Path3D/PathFollow3D/Hurdle" method="_on_hitbox_area_entered"]
[connection signal="button_pressed" from="Character/XROrigin3D/LeftHand" to="." method="_on_left_hand_button_pressed"]
[connection signal="area_entered" from="HandZone" to="." method="_on_hand_zone_area_entered"]
[connection signal="area_exited" from="HandZone" to="." method="_on_hand_zone_area_exited"]
[connection signal="area_entered" from="RepCounter" to="." method="_on_rep_counter_area_entered"]

[editable path="Character"]
[editable path="MonorailTrainFlat2"]
[editable path="Path3D/PathFollow3D/Hurdle"]
